// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`revoking an approval should render the expected HTML 1`] = `
<div>
  <div
    class="approveTransactionWarning"
  >
    <div
      class="approveTransactionWarningOptions"
    >
      <div
        class="approveTransactionWarningReject"
        role="button"
      >
        Reject
      </div>
      <div
        class="approveTransactionWarningProceed"
        role="button"
      >
        Proceed
      </div>
    </div>
    <div
      class="approveTransactionWarningFill"
    >
      <div
        class="approveTransactionWarningIcon approveTransactionWarningIconLeft"
      >
        <div
          style="width: 32px; height: 32px;"
        >
          <svg
            height="32px"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M13 17.5a1 1 0 11-2 0 1 1 0 012 0zm-.25-8.25a.75.75 0 00-1.5 0v4.5a.75.75 0 001.5 0v-4.5z"
              fill="currentColor"
            />
            <path
              d="M9.836 3.244c.963-1.665 3.365-1.665 4.328 0l8.967 15.504c.963 1.667-.24 3.752-2.165 3.752H3.034c-1.926 0-3.128-2.085-2.165-3.752L9.836 3.244zm3.03.751a1 1 0 00-1.732 0L2.168 19.499A1 1 0 003.034 21h17.932a1 1 0 00.866-1.5L12.866 3.994z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="approveTransactionWarningIcon approveTransactionWarningIconRight"
      >
        <div
          style="width: 32px; height: 32px;"
        >
          <svg
            height="32px"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M13 17.5a1 1 0 11-2 0 1 1 0 012 0zm-.25-8.25a.75.75 0 00-1.5 0v4.5a.75.75 0 001.5 0v-4.5z"
              fill="currentColor"
            />
            <path
              d="M9.836 3.244c.963-1.665 3.365-1.665 4.328 0l8.967 15.504c.963 1.667-.24 3.752-2.165 3.752H3.034c-1.926 0-3.128-2.085-2.165-3.752L9.836 3.244zm3.03.751a1 1 0 00-1.732 0L2.168 19.499A1 1 0 003.034 21h17.932a1 1 0 00.866-1.5L12.866 3.994z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="approveTransactionWarningTitle"
      >
        revoke token approval
      </div>
      <div
        class="approveTokenSpend"
      >
        <div
          class="approveTokenSpendDescription"
        >
          <div
            class="approveTokenSpendSub"
          >
            wants to revoke approval to spend
          </div>
          <div
            class="approveTokenSpendToken"
          >
            <div
              class="approveTokenSpendTokenSymbol"
            >
              ???
            </div>
            <div
              class="approveTokenSpendTokenContract"
            />
          </div>
          <div
            class="approveTokenSpendTokenName"
          >
            Unknown Token
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the expected HTML 1`] = `
<div>
  <div
    class="approveTransactionWarning"
  >
    <div
      class="approveTransactionWarningOptions"
    >
      <div
        class="approveTransactionWarningReject"
        role="button"
      >
        Reject
      </div>
      <div
        class="approveTokenSpendEditButton"
        role="button"
      >
        Edit
      </div>
      <div
        class="approveTransactionWarningProceed"
        role="button"
      >
        Proceed
      </div>
    </div>
    <div
      class="approveTransactionWarningFill"
    >
      <div
        class="approveTransactionWarningIcon approveTransactionWarningIconLeft"
      >
        <div
          style="width: 32px; height: 32px;"
        >
          <svg
            height="32px"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M13 17.5a1 1 0 11-2 0 1 1 0 012 0zm-.25-8.25a.75.75 0 00-1.5 0v4.5a.75.75 0 001.5 0v-4.5z"
              fill="currentColor"
            />
            <path
              d="M9.836 3.244c.963-1.665 3.365-1.665 4.328 0l8.967 15.504c.963 1.667-.24 3.752-2.165 3.752H3.034c-1.926 0-3.128-2.085-2.165-3.752L9.836 3.244zm3.03.751a1 1 0 00-1.732 0L2.168 19.499A1 1 0 003.034 21h17.932a1 1 0 00.866-1.5L12.866 3.994z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="approveTransactionWarningIcon approveTransactionWarningIconRight"
      >
        <div
          style="width: 32px; height: 32px;"
        >
          <svg
            height="32px"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M13 17.5a1 1 0 11-2 0 1 1 0 012 0zm-.25-8.25a.75.75 0 00-1.5 0v4.5a.75.75 0 001.5 0v-4.5z"
              fill="currentColor"
            />
            <path
              d="M9.836 3.244c.963-1.665 3.365-1.665 4.328 0l8.967 15.504c.963 1.667-.24 3.752-2.165 3.752H3.034c-1.926 0-3.128-2.085-2.165-3.752L9.836 3.244zm3.03.751a1 1 0 00-1.732 0L2.168 19.499A1 1 0 003.034 21h17.932a1 1 0 00.866-1.5L12.866 3.994z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="approveTransactionWarningTitle"
      >
        token approval
      </div>
      <div
        class="approveTokenSpend"
      >
        <div
          class="approveTokenSpendDescription"
        >
          <div
            class="approveTokenSpendSub"
          >
            wants approval to spend
          </div>
          <div
            class="approveTokenSpendToken"
          >
            <div
              class="approveTokenSpendTokenSymbol"
            >
              ???
            </div>
            <div
              class="approveTokenSpendTokenContract"
            />
          </div>
          <div
            class="approveTokenSpendTokenName"
          >
            Unknown Token
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
